--- a/src/gui/DepartmentList.fxml
+++ b/src/gui/DepartmentList.fxml
@@ -27,7 +27,8 @@
       <TableView fx:id="tableViewDepartment" prefHeight="200.0" prefWidth="200.0">
         <columns>
           <TableColumn fx:id="tableColumnId" prefWidth="100.0" text="Id" />
-          <TableColumn fx:id="tableColumnName" prefWidth="437.0" text="Name" />
+          <TableColumn fx:id="tableColumnName" prefWidth="337.0" text="Name" />
+            <TableColumn fx:id="tableColumnEDIT" prefWidth="101.0" />
         </columns>
       </TableView>
    </children>
