--- a/src/gui/DepartmentList.fxml
+++ b/src/gui/DepartmentList.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="363.0" prefWidth="539.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.DepartmentListController">
+<VBox prefHeight="363.0" prefWidth="542.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.DepartmentListController">
    <children>
       <Label text="Department Registration">
          <font>
@@ -27,8 +27,9 @@
       <TableView fx:id="tableViewDepartment" prefHeight="200.0" prefWidth="200.0">
         <columns>
           <TableColumn fx:id="tableColumnId" prefWidth="100.0" text="Id" />
-          <TableColumn fx:id="tableColumnName" prefWidth="337.0" text="Name" />
-            <TableColumn fx:id="tableColumnEDIT" prefWidth="101.0" />
+          <TableColumn fx:id="tableColumnName" prefWidth="284.0" text="Name" />
+            <TableColumn fx:id="tableColumnEDIT" />
+            <TableColumn fx:id="tableColumnREMOVE" minWidth="0.0" />
         </columns>
       </TableView>
    </children>
