--- a/src/gui/SellerList.fxml
+++ b/src/gui/SellerList.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="363.0" prefWidth="542.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SellerListController">
+<VBox prefHeight="447.0" prefWidth="722.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SellerListController">
    <children>
       <Label text="Seller Registration">
          <font>
@@ -24,12 +24,15 @@
           <Button fx:id="btNew" mnemonicParsing="false" onAction="#onBtNewAction" text="New" />
         </items>
       </ToolBar>
-      <TableView fx:id="tableViewSeller" prefHeight="200.0" prefWidth="200.0">
+      <TableView fx:id="tableViewSeller" prefHeight="388.0" prefWidth="722.0">
         <columns>
-          <TableColumn fx:id="tableColumnId" prefWidth="100.0" text="Id" />
-          <TableColumn fx:id="tableColumnName" prefWidth="284.0" text="Name" />
-            <TableColumn fx:id="tableColumnEDIT" />
-            <TableColumn fx:id="tableColumnREMOVE" minWidth="0.0" />
+          <TableColumn fx:id="tableColumnId" prefWidth="59.0" text="Id" />
+          <TableColumn fx:id="tableColumnName" prefWidth="170.0" text="Name" />
+            <TableColumn fx:id="tableColumnEmail" prefWidth="172.0" text="Email" />
+            <TableColumn fx:id="tableColumnBirthDate" prefWidth="112.0" text="Birth Date" />
+            <TableColumn fx:id="tableColumnBaseSalary" prefWidth="102.0" text="Base Salary" />
+            <TableColumn fx:id="tableColumnEDIT" minWidth="6.0" prefWidth="57.0" />
+            <TableColumn fx:id="tableColumnREMOVE" minWidth="0.0" prefWidth="97.0" />
         </columns>
       </TableView>
    </children>
