--- a/src/gui/SellerForm.fxml
+++ b/src/gui/SellerForm.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -56,6 +57,7 @@
             <Label fx:id="labelErrorBirthDate" prefHeight="16.0" prefWidth="163.0" textFill="#ee0606" GridPane.columnIndex="2" GridPane.rowIndex="3" />
             <Label fx:id="labelErrorBaseSalary" prefHeight="16.0" prefWidth="163.0" textFill="#ee0606" GridPane.columnIndex="2" GridPane.rowIndex="4" />
             <DatePicker fx:id="dpBirthDate" prefHeight="24.0" prefWidth="238.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <ComboBox fx:id="comboBoxDepartment" prefHeight="24.0" prefWidth="238.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
          </children>
       </GridPane>
    </children>
